[package]
name = "service-monitor"
version = "0.0.0"
authors = ["Charlie Phillips <charlie_l_phillips@proton.me>"]
edition = "2021"

[dependencies]
redox_syscall = "0.5"
redox-scheme = "0.2.1"
redox-daemon = "0.1.2"
libredox = "0.1.3"
log = "0.4.22"
redox-log = "0.1.4"
timer = "0.2.0"
chrono = "0.4.39"
