[package]
name = "services-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[features]
# default = ["wayland"]
# wayland = ["libcosmic/wayland"]
default = ["wgpu"]
wgpu = ["libcosmic/wgpu"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-log = "0.2.0"
hex_color = { version = "3", features = ["serde"] }
#TODO: for repeat_n, which is in std in 1.82
palette = { version = "0.7", features = ["serde"] }
ron = "0.9"
serde = { version = "1", features = ["serde_derive"] }
tokio = { version = "1", features = ["sync", "process", "time"] }
# Internationalization
# TODO: required by 1.80
home = "=0.5.11"
chrono = "*"
shared = { version = "0.1.0", path = "../shared" }
toml = { version = "0.8.20", features = ["preserve_order"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    # "debug",
    "winit",
    "tokio",
    # "xdg-portal",
    # "dbus-config",
    "a11y",
    "wgpu",
    # "single-instance",
    "multi-window",
]

[target.'cfg(unix)'.dependencies]
fork = "0.2"

[profile.release-with-debug]
inherits = "release"
debug = true

[patch.crates-io]
xdg-mime = { git = "https://github.com/ellieplayswow/xdg-mime-rs", branch = "feature/get-same-as" }
onig = { git = "https://github.com/rust-onig/rust-onig.git", branch = "main" }
onig_sys = { git = "https://github.com/rust-onig/rust-onig.git", branch = "main" }
