[package]
name = "shared"
description = "A crate containing various structs, functions, and enums shared between the services and service-monitor crates"
version = "0.1.0"
authors = ["Charlie Phillips <Donald Nelson <s.donald.nelson@gmail.com>", ]
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }